tests/negative/top_level_statement.expect
error[E0007]: expected top-level declaration
  --> top_level_statement.vit:1:1
    |
  1 | break
    | ^^^^^
note: this is a statement; place it inside 'proc { ... }' or 'entry { ... }'
  --> top_level_statement.vit:1:1
    |
  1 | break
    | ^^^^^
